--- a/SPRNetTool/View/Widgets/FileHeadEditor.xaml
+++ b/SPRNetTool/View/Widgets/FileHeadEditor.xaml
@@ -17,7 +17,9 @@
 	<UserControl.Resources>
 		<cvt:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
 	</UserControl.Resources>
-	<Grid DataContext="{Binding ElementName=UC_Container, Path=ViewModel}">
+	<Grid DataContext="{Binding ElementName=UC_Container, Path=ViewModel}"
+		  Margin="10,0"
+		  Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_1}}">
 		<Grid Visibility="{Binding IsSpr, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter={x:Static cvt:InvisibleType.REVERSE_COLLAPSED}}">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition />
