--- a/SPRNetTool/View/Pages/SprEditorPage.xaml
+++ b/SPRNetTool/View/Pages/SprEditorPage.xaml
@@ -23,7 +23,7 @@
 	<UserControl.Resources>
 		<cvt:RevertBoolConverter x:Key="RevertBoolConverter" />
 		<cvt:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
-		<Style TargetType="wg:CollapsibleControl">
+		<!--<Style TargetType="wg:CollapsibleControl">
 			<Setter Property="Template">
 				<Setter.Value>
 					<ControlTemplate TargetType="{x:Type wg:CollapsibleControl}">
@@ -100,7 +100,7 @@
 					</ControlTemplate>
 				</Setter.Value>
 			</Setter>
-		</Style>
+		</Style>-->
 	</UserControl.Resources>
 	<Grid>
 		<Grid.ColumnDefinitions>
@@ -156,6 +156,7 @@
 				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
 			<wg:CollapsibleControl Header="IMAGE INFO"
+								   BorderThickness="1"
 								   IsCollapse="True">
 				<wg:CollapsibleControl.ExtraHeaderContent>
 					<StackPanel Orientation="Horizontal">
@@ -230,14 +231,14 @@
 					</StackPanel>
 				</wg:CollapsibleControl.ExtraHeaderContent>
 
-				<wg:FileHeadEditor Margin="10,0"
-								   MinHeight="230"
+				<wg:FileHeadEditor MinHeight="230"
 								   ViewModel="{Binding FileHeadEditorVM}" />
 
 			</wg:CollapsibleControl>
 
 			<wg:CollapsibleControl Header="SPR PALETTE INFO"
 								   Grid.Row="2"
+								   BorderThickness="1"
 								   IsCollapse="True">
 				<wg:PaletteEditor Grid.Row="1"
 								  Height="379"
