--- a/SPRNetTool/View/Widgets/SmoothProgressbar.xaml
+++ b/SPRNetTool/View/Widgets/SmoothProgressbar.xaml
@@ -6,21 +6,22 @@
 			 xmlns:local="clr-namespace:ArtWiz.View.Widgets"
 			 mc:Ignorable="d"
 			 d:DesignHeight="450"
-			 d:DesignWidth="800">
+			 d:DesignWidth="800"
+			 x:Name="ControlContainer">
 	<Grid>
 		<!-- Background của ProgressBar -->
 		<Rectangle x:Name="BackgroundBar"
 				   Fill="#FF424242"
 				   RadiusX="4"
 				   RadiusY="4"
-				   Height="8" />
+				   Height="{Binding ElementName=ControlContainer, Path=ActualHeight}" />
 
 		<!-- Foreground hiển thị progress -->
 		<Rectangle x:Name="ProgressIndicator"
 				   Fill="#FF4FE79A"
 				   RadiusX="4"
 				   RadiusY="4"
-				   Height="8"
+				   Height="{Binding ElementName=ControlContainer, Path=ActualHeight}"
 				   HorizontalAlignment="Left"
 				   Width="0" />
 	</Grid>
