--- a/SPRNetTool/View/Pages/PakEditor/OriginalPakFileItem.xaml
+++ b/SPRNetTool/View/Pages/PakEditor/OriginalPakFileItem.xaml
@@ -143,6 +143,7 @@
 								   StrokeThickness="2"
 								   IsEnableToggleClick="False"
 								   Style="{StaticResource IconToogleStyle2}"
+								   Click="OnButtonClick"
 								   IconRatio="0.55"
 								   Width="20"
 								   Height="20"
@@ -231,9 +232,8 @@
 				<TextBlock FontSize="14"
 						   Margin="5,0"
 						   VerticalAlignment="Center"
-						   Text="Pak save time:"
 						   Foreground="{StaticResource ResourceKey={x:Static def:Definitions.TextForegroundBrushLevel0_5}}">
-					<Run Text="Pak time: " />
+					<Run Text="Pak save time: " />
 					<Run Text="{Binding PakTimeSave}" />
 				</TextBlock>
 			</StackPanel>
