--- a/SPRNetTool/View/Pages/PakEditor/PakEditorPage.xaml
+++ b/SPRNetTool/View/Pages/PakEditor/PakEditorPage.xaml
@@ -1,11 +1,11 @@
-﻿<base:BasePageViewer x:Class="ArtWiz.View.Pages.PakEditorPage"
+﻿<base:BasePageViewer x:Class="ArtWiz.View.Pages.PakEditor.PakEditorPage"
 					 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 					 xmlns:base="clr-namespace:ArtWiz.View.Base"
 					 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 					 xmlns:wg="clr-namespace:ArtWiz.View.Widgets"
-					 xmlns:local="clr-namespace:ArtWiz.View.Pages"
+					 xmlns:local="clr-namespace:ArtWiz.View.Pages.PakEditor"
 					 mc:Ignorable="d"
 					 d:DesignHeight="720"
 					 d:DesignWidth="1280"
