--- a/SPRNetTool/View/Pages/PakEditor/OriginalPakFileItem.xaml
+++ b/SPRNetTool/View/Pages/PakEditor/OriginalPakFileItem.xaml
@@ -123,7 +123,7 @@
 										<DataTrigger Binding="{Binding LoadingStatus}"
 													 Value="{x:Static vm:PakItemLoadingStatus.LOADED}">
 											<Setter Property="Foreground"
-													Value="Green" />
+													Value="{StaticResource ResourceKey={x:Static def:Definitions.ButtonAndIconBrushLevel0}}" />
 										</DataTrigger>
 									</Style.Triggers>
 								</Style>
@@ -146,6 +146,7 @@
 								   Click="OnButtonClick"
 								   IconRatio="0.55"
 								   Width="20"
+								   Tag="{x:Static local:PakEditorPageId.StartLoadPakFile}"
 								   Height="20"
 								   Margin="0,0,5,0"
 								   OnIconData="{StaticResource ResourceKey={x:Static def:Definitions.PlayIconGeometry}}"
@@ -199,6 +200,8 @@
 							   Margin="0,10,10,0"
 							   Cursor="Hand"
 							   IconRatio="0.8"
+							   Click="OnButtonClick"
+							   Tag="{x:Static local:PakEditorPageId.RemoveFilePak}"
 							   Stroke="{StaticResource ResourceKey={x:Static def:Definitions.TextForegroundBrushLevel0_5}}"
 							   Width="15"
 							   Height="15"
