--- a/SPRNetTool/View/Pages/PakEditor/BlockPreviewer.xaml
+++ b/SPRNetTool/View/Pages/PakEditor/BlockPreviewer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ArtWiz.View.Pages.PakEditor.BlockPreviewer"
+﻿<base:BasePageViewerChild x:Class="ArtWiz.View.Pages.PakEditor.BlockPreviewer"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -7,6 +7,7 @@
 			 mc:Ignorable="d"
 			 d:DesignHeight="800"
 			 d:DesignWidth="800"
+			 xmlns:base="clr-namespace:ArtWiz.View.Base"
 			 d:DataContext="{d:DesignInstance vm:PakPageViewModel, IsDesignTimeCreatable=False}"
 			 xmlns:def="clr-namespace:ArtWiz"
 			 xmlns:wg="clr-namespace:ArtWiz.View.Widgets"
@@ -57,12 +58,14 @@
 
 			<Button Margin="25,30,250,0"
 					Height="40"
+					Tag="{x:Static local:PakEditorPageId.ExtractBlock}"
 					BorderThickness="0"
+					Click="OnButtonClick"
 					Background="{StaticResource ResourceKey={x:Static def:Definitions.ForegroundLevel2}}"
 					Content="Xuất file"
 					Foreground="White"
 					FontSize="18">
-
+				
 			</Button>
 		</StackPanel>
 
@@ -84,4 +87,4 @@
 					   DefaultIconData="{StaticResource ResourceKey={x:Static def:Definitions.CloseButtonGeometry}}"
 					   OffIconData="{StaticResource ResourceKey={x:Static def:Definitions.CloseButtonGeometry}}" />
 	</Grid>
-</UserControl>
+</base:BasePageViewerChild>
