--- a/SPRNetTool/View/Pages/PakEditor/PakEditorPage.xaml
+++ b/SPRNetTool/View/Pages/PakEditor/PakEditorPage.xaml
@@ -313,9 +313,9 @@
 			</Grid>
 			
 			<pe:BlockPreviewer Grid.Row="1"
+							   OwnerPage="{Binding RelativeSource={RelativeSource AncestorType=base:BasePageViewer}}"
 							   Grid.Column="3"
 							   BorderThickness="1,0,1,0" />
-
 			<Grid Grid.Column="5"
 				  Grid.Row="1"
 				  Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel1}}">
