Triển khai cache view model cho PakEditorPage
Khi sử dụng pak editor page, nếu pak work space đã được add item vào rồi, thì nên giữ nguyên trạng thái hiển thị, thay vì tạo mới view model

--- a/SPRNetTool/View/Pages/PakEditor/PakEditorPage.xaml
+++ b/SPRNetTool/View/Pages/PakEditor/PakEditorPage.xaml
@@ -20,7 +20,8 @@
 					 xmlns:vm="clr-namespace:ArtWiz.ViewModel">
 
 	<UserControl.DataContext>
-		<vm:PakPageViewModel />
+		<vm:ViewModelGeneratorHelper DataContextType="{x:Type vm:PakPageViewModel}"
+									 GeneratorType="Reuse"/>
 	</UserControl.DataContext>
 
 	<UserControl.Resources>
@@ -311,7 +312,7 @@
 				</ListBox>
 
 			</Grid>
-			
+
 			<pe:BlockPreviewer Grid.Row="1"
 							   OwnerPage="{Binding RelativeSource={RelativeSource AncestorType=base:BasePageViewer}}"
 							   Grid.Column="3"
