--- a/SPRNetTool/View/Pages/PakEditor/BlockPreviewer.xaml
+++ b/SPRNetTool/View/Pages/PakEditor/BlockPreviewer.xaml
@@ -1,21 +1,22 @@
 ﻿<base:BasePageViewerChild x:Class="ArtWiz.View.Pages.PakEditor.BlockPreviewer"
-			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-			 xmlns:local="clr-namespace:ArtWiz.View.Pages.PakEditor"
-			 mc:Ignorable="d"
-			 d:DesignHeight="800"
-			 d:DesignWidth="800"
-			 xmlns:base="clr-namespace:ArtWiz.View.Base"
-			 d:DataContext="{d:DesignInstance vm:PakPageViewModel, IsDesignTimeCreatable=False}"
-			 xmlns:def="clr-namespace:ArtWiz"
-			 xmlns:wg="clr-namespace:ArtWiz.View.Widgets"
-			 xmlns:vm="clr-namespace:ArtWiz.ViewModel"
-			 xmlns:sys="clr-namespace:System;assembly=mscorlib"
-			 xmlns:cvt="clr-namespace:ArtWiz.View.Utils"
-			 BorderBrush="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_5}}"
-			 Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_1}}">
+						  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+						  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+						  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+						  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+						  xmlns:local="clr-namespace:ArtWiz.View.Pages.PakEditor"
+						  mc:Ignorable="d"
+						  d:DesignHeight="800"
+						  d:DesignWidth="800"
+						  xmlns:base="clr-namespace:ArtWiz.View.Base"
+						  d:DataContext="{d:DesignInstance pakvm:PakPageViewModel, IsDesignTimeCreatable=False}"
+						  xmlns:def="clr-namespace:ArtWiz"
+						  xmlns:wg="clr-namespace:ArtWiz.View.Widgets"
+						  xmlns:vm="clr-namespace:ArtWiz.ViewModel"
+						  xmlns:pakvm="clr-namespace:ArtWiz.ViewModel.PakEditor"
+						  xmlns:sys="clr-namespace:System;assembly=mscorlib"
+						  xmlns:cvt="clr-namespace:ArtWiz.View.Utils"
+						  BorderBrush="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_5}}"
+						  Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_1}}">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="1.5*" />
@@ -65,7 +66,7 @@
 					Content="Xuất file"
 					Foreground="White"
 					FontSize="18">
-				
+
 			</Button>
 		</StackPanel>
 
