--- a/SPRNetTool/View/LoginWindow.xaml
+++ b/SPRNetTool/View/LoginWindow.xaml
@@ -1,15 +1,23 @@
-﻿<Window x:Class="ArtWiz.View.Window1"
+﻿<base:BaseArtWizWindow  
+        x:Class="ArtWiz.View.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ArtWiz.View" 
+        xmlns:local="clr-namespace:ArtWiz.View"
+        xmlns:base="clr-namespace:ArtWiz.View.Base"
+        xmlns:cvt="clr-namespace:ArtWiz.View.Utils"
         xmlns:wg="clr-namespace:ArtWiz.View.Widgets"
+        xmlns:vm="clr-namespace:ArtWiz.ViewModel"
+        xmlns:def="clr-namespace:ArtWiz"
         mc:Ignorable="d"
-        Title="Login"
-        Background="Black"
-		SizeToContent="WidthAndHeight"
-		WindowStartupLocation="CenterScreen">
+        Background="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0_1}}"
+        SizeToContent="WidthAndHeight"
+        WindowStartupLocation="CenterScreen"
+        FontFamily="Calibri"
+        >
+    
+    
 
     <Window.Resources>
         <Style TargetType="FrameworkElement" x:Key="StackPanelItemStyle">
@@ -26,7 +34,7 @@
         <!-- Header with logo and title -->
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,30">
             <Image Source="\Resources\logo_500.png" Height="150" Style="{StaticResource StackPanelItemStyle}"/>
-            <TextBlock Text="ArtWiz" FontSize="40" Foreground="White" FontWeight="Bold" VerticalAlignment="Center" Style="{StaticResource StackPanelItemStyle}"/>
+            <TextBlock Text="ArtWiz" FontSize="40" Foreground="{StaticResource {x:Static def:Definitions.TextForegroundBrushLevel0}}" FontWeight="Bold" VerticalAlignment="Center" Style="{StaticResource StackPanelItemStyle}"/>
         </StackPanel>
 
         <!-- Main Login Form -->
@@ -34,58 +42,58 @@
             <TextBlock Style="{StaticResource StackPanelItemStyle}" 
                        Text="Nhập thông tin để đăng nhập vào tài khoản của bạn" 
                        FontWeight="Bold"
-                       FontSize="14" Foreground="White" 
+                       FontSize="14" Foreground="{StaticResource {x:Static def:Definitions.TextForegroundBrushLevel0}}"
                        TextWrapping="Wrap" 
                        TextAlignment="Center"/>
 
             <wg:PlaceHolderTextBox 
                                    Placeholder="Email"
-								   Height="44"
-								   FontSize="16"
-								   PlaceholderForeground="#FF7D8184"
-								   BorderBrush="#FF7D8184"
-								   BorderThickness="1"
+            Height="44"
+            FontSize="16"
+            PlaceholderForeground="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0_5}}"
+            BorderBrush="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0_10}}"
+            BorderThickness="1"
                                    Style="{StaticResource StackPanelItemStyle}"
-								   />
+           />
 
             <wg:PlaceHolderTextBox  Placeholder="Password"
                                     Height="44"
                                     FontSize="16"
-                                    PlaceholderForeground="#FF7D8184"
-                                    BorderBrush="#FF7D8184"
+                                    PlaceholderForeground="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0_5}}"
+                                    BorderBrush="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0_10}}"
                                     BorderThickness="1"
                                     Style="{StaticResource StackPanelItemStyle}"
                                     />
 
             <!-- Buttons: Login and Forgot Password -->
             <Grid Style="{StaticResource StackPanelItemStyle}">
-                <Button Content="Đăng nhập" Width="120" Background="Black" Foreground="White" BorderBrush="White" Margin="0,0,10,0" Height="40" HorizontalAlignment="Left"/>
-                <Button Content="Quên mật khẩu?" Width="120" Background="Black" Foreground="White" BorderBrush="Transparent" Margin="10,0,0,0" Height="40" HorizontalAlignment="Right"/>
+                <Button Content="Đăng nhập" Width="120" Background="{StaticResource {x:Static def:Definitions.BackgroundLevel0}}" Foreground="{StaticResource {x:Static def:Definitions.TextForegroundBrushLevel0}}" BorderBrush="{StaticResource {x:Static def:Definitions.BackgroundLevel0}}" Margin="0,0,10,0" Height="40" HorizontalAlignment="Left"/>
+                <Button Content="Quên mật khẩu?" Width="120" Background="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0_1}}" Foreground="{StaticResource {x:Static def:Definitions.TextForegroundBrushLevel0}}" FontWeight="Bold" BorderBrush="Transparent" Margin="10,0,0,0" Height="40" HorizontalAlignment="Right"/>
             </Grid>
 
             <!-- Divider Text -->
-            <TextBlock Text="Hoặc đăng nhập bằng" FontSize="12" FontWeight="Bold" Foreground="White" HorizontalAlignment="Left" Style="{StaticResource StackPanelItemStyle}"/>
+            <TextBlock Text="Hoặc đăng nhập bằng" FontSize="12" FontWeight="Bold" Foreground="{StaticResource {x:Static def:Definitions.TextForegroundBrushLevel0}}" HorizontalAlignment="Left" Style="{StaticResource StackPanelItemStyle}"/>
 
             <!-- Social Media Login Buttons -->
             <Grid>
-                <Button Width="140" Background="#666666" Foreground="Black" Style="{StaticResource StackPanelItemStyle}" Height="40" HorizontalAlignment="Left">
+                <Button Width="140" Background="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0_10}}" Foreground="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0}}" Style="{StaticResource StackPanelItemStyle}" Height="40" HorizontalAlignment="Left" BorderBrush="Transparent">
                     <StackPanel Orientation="Horizontal">
-                        <Image Source="D:\ProjectWizMachine\ArtWiz\SPRNetTool\Resources\Logos\logo_google-removebg-preview.png" Height="30" Margin="5"/>
+                        <Image Source="\Resources\logo_google.png" Height="20" Margin="5"/>
                         <TextBlock Text="Google" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
-                <Button Width="140" Background="#1DB954" Foreground="Black" Style="{StaticResource StackPanelItemStyle}" Height="40" HorizontalAlignment="Right">
+                <Button Width="140" Background="{StaticResource {x:Static def:Definitions.ButtonAndIconBrushLevel1}}" Foreground="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0}}"  Style="{StaticResource StackPanelItemStyle}" Height="40" HorizontalAlignment="Right" BorderBrush="Transparent">
                     <StackPanel Orientation="Horizontal">
-                        <Image Source="D:\ProjectWizMachine\ArtWiz\SPRNetTool\Resources\Logos\logo_facebook-removebg-preview.png" Height="30" Margin="5" />
+                        <Image Source="\Resources\logo_facebook.png" Height="20" Margin="5" />
                         <TextBlock Text="Facebook" VerticalAlignment="Center"/>
                     </StackPanel>
                 </Button>
             </Grid>
             <!-- Register Button -->
             <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
-                <TextBlock Text="Lần đầu sử dụng ArtWiz" FontSize="12" Foreground="White" FontWeight="Bold" Style="{StaticResource StackPanelItemStyle}" TextAlignment="Center"/>
-                <Button Content="Đăng ký" HorizontalAlignment="Stretch" Background="#1DB954" Foreground="Black" BorderBrush="Transparent" Height="40" Style="{StaticResource StackPanelItemStyle}"/>
+                <TextBlock Text="Lần đầu sử dụng ArtWiz" FontSize="12" Foreground="{StaticResource {x:Static def:Definitions.TextForegroundBrushLevel0}}" FontWeight="Bold" Style="{StaticResource StackPanelItemStyle}" TextAlignment="Center"/>
+                <Button Content="Đăng ký" HorizontalAlignment="Stretch" Background="{StaticResource {x:Static def:Definitions.ButtonAndIconBrushLevel1}}" Foreground="{StaticResource {x:Static def:Definitions.PanelBackgroundLevel0}}" BorderBrush="Transparent" Height="40" Style="{StaticResource StackPanelItemStyle}"/>
             </StackPanel>
         </StackPanel>
     </Grid>
-</Window>
+</base:BaseArtWizWindow>
