--- a/SPRNetTool/View/Pages/PakEditor/BlockPreviewer.xaml
+++ b/SPRNetTool/View/Pages/PakEditor/BlockPreviewer.xaml
@@ -8,7 +8,7 @@
 						  d:DesignHeight="800"
 						  d:DesignWidth="800"
 						  xmlns:base="clr-namespace:ArtWiz.View.Base"
-						  d:DataContext="{d:DesignInstance pakvm:PakPageViewModel, IsDesignTimeCreatable=False}"
+						  d:DataContext="{d:DesignInstance pakvm:PakBlockItemViewModel, IsDesignTimeCreatable=False}"
 						  xmlns:def="clr-namespace:ArtWiz"
 						  xmlns:wg="clr-namespace:ArtWiz.View.Widgets"
 						  xmlns:vm="clr-namespace:ArtWiz.ViewModel"
@@ -28,6 +28,7 @@
 						 ToolBoxIconSize="40"
 						 ToolBoxWidth="60"
 						 Padding="10"
+						 ShowLoadingIcon="{Binding IsLoadingBlock}"
 						 ViewModel="{Binding BitmapViewerVM}"
 						 Background="#FF151515"
 						 ToolBoxBorderBrush="#FF151515"
