--- a/SPRNetTool/View/Pages/PakEditor/PakEditorPage.xaml
+++ b/SPRNetTool/View/Pages/PakEditor/PakEditorPage.xaml
@@ -14,13 +14,16 @@
 					 xmlns:pe="clr-namespace:ArtWiz.View.Pages.PakEditor"
 					 MinWidth="1280"
 					 MinHeight="718"
+					 d:DataContext="{d:DesignInstance pakvm:PakPageViewModel, IsDesignTimeCreatable=False}"
 					 FontFamily="{StaticResource ResourceKey={x:Static def:Definitions.FontFiraSans_Regular}}"
 					 xmlns:def="clr-namespace:ArtWiz"
 					 Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0}}"
-					 xmlns:vm="clr-namespace:ArtWiz.ViewModel">
+					 xmlns:vm="clr-namespace:ArtWiz.ViewModel"
+					 xmlns:pakvm="clr-namespace:ArtWiz.ViewModel.PakEditor">
 
 	<UserControl.DataContext>
-		<vm:PakPageViewModel />
+		<vm:ViewModelGeneratorHelper DataContextType="{x:Type pakvm:PakPageViewModel}"
+									 GeneratorType="Reuse" />
 	</UserControl.DataContext>
 
 	<UserControl.Resources>
@@ -312,64 +315,15 @@
 
 			</Grid>
 
-			<Border Grid.Row="1"
-					Grid.Column="3"
-					BorderThickness="1,0,1,0"
-					BorderBrush="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_5}}"
-					Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_1}}">
-				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="1.5*" />
-						<RowDefinition />
-					</Grid.RowDefinitions>
-
-					<wg:BitmapViewer ToolBoxMargin="0,0,10,0"
-									 Margin="10,40"
-									 ToolBoxIconSize="40"
-									 ToolBoxWidth="60"
-									 Padding="10"
-									 Background="#FF151515"
-									 ToolBoxBorderBrush="#FF151515"
-									 ToolBoxBackground="#FF151515"
-									 ToolBoxIconFill="#FF262626"
-									 ToolBoxIconStroke="White"
-									 UseFitToScreenFunction="True"
-									 UseLayoutBoundFunction="False"
-									 UseTransparenDecodedFrameBackgroundFunction="False"
-									 UseTransparentBackgroundFunction="False">
-
-					</wg:BitmapViewer>
-
-					<StackPanel Grid.Row="1"
-								Margin="10,0">
-						<Label Content="Chi tiết khối"
-							   Foreground="White"
-							   FontWeight="Bold"
-							   FontSize="18" />
-						<TextBlock Margin="25,10,0,0">
-							<Run Text="Kích thước:"
-								 Foreground="White"
-								 FontSize="16" />
-						</TextBlock>
-						<TextBlock Margin="25,5,0,0">
-							<Run Text="Định dạng:"
-								 Foreground="White"
-								 FontSize="16" />
-						</TextBlock>
-
-						<Button Margin="25,30,250,0"
-								Height="40"
-								BorderThickness="0"
-								Background="{StaticResource ResourceKey={x:Static def:Definitions.ForegroundLevel2}}"
-								Content="Xuất file"
-								Foreground="White"
-								FontSize="18">
-
-						</Button>
-					</StackPanel>
-				</Grid>
-			</Border>
-
+			<!--TODO: Find a better way to set the owner
+			page for the page's child, ideally, the set 
+			method should be private, and the child should 
+			find the owner page in code behind-->
+			<pe:BlockPreviewer Grid.Row="1"
+							   DataContext="{Binding CurrentSelectedPakFile.CurrentSelectedPakBlock}"
+							   OwnerPage="{Binding RelativeSource={RelativeSource AncestorType=base:BasePageViewer}}"
+							   Grid.Column="3"
+							   BorderThickness="1,0,1,0" />
 			<Grid Grid.Column="5"
 				  Grid.Row="1"
 				  Background="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel1}}">
