--- a/SPRNetTool/View/Widgets/WindowTitleBar.xaml
+++ b/SPRNetTool/View/Widgets/WindowTitleBar.xaml
@@ -37,8 +37,8 @@
 					Value="{StaticResource ResourceKey={x:Static def:Definitions.ButtonAndIconBrushLevel0}}" />
 			<Setter Property="Template">
 				<Setter.Value>
-					<ControlTemplate TargetType="{x:Type Button}">
-						<Border Background="{TemplateBinding Background}"
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}"
 								Padding="{TemplateBinding Padding}"
 								x:Name="MainBorder">
 							<Path x:Name="ContentPath"
@@ -51,6 +51,7 @@
 						<ControlTemplate.Triggers>
                             <DataTrigger Binding="{Binding IsTitleBarHide}" Value="true">
                                 <Setter Property="Foreground" Value="White"/>
+                                <Setter Property="VerticalAlignment" Value="Top"/>
                             </DataTrigger>
                             <Trigger Property="IsMouseOver"
 									 Value="True">
@@ -261,12 +262,34 @@
             </Style.Triggers>
         </Style>
 
-	</UserControl.Resources>
-	<Border BorderThickness="0,0,0,1"
-			BorderBrush="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_4}}">
-		<Grid Background="{StaticResource ResourceKey={x:Static def:Definitions.MenuItemBackground}}"
-			  x:Name="ContainerGrid">
-			<Grid.ColumnDefinitions>
+        <Style x:Key="DefaultBorderStyle" TargetType="Border">
+            <Setter Property="BorderThickness" Value="0,0,0,1"/>
+            <Setter Property="BorderBrush" Value="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_4}}"/>
+
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsTitleBarHide}" Value="true">
+                    <Setter Property="BorderThickness" Value="0,0,0,0"/>
+                    <Setter Property="BorderBrush" Value="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_1}}"/>
+                    <Setter Property="Background" Value="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_1}}"/>
+
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="DefaultGridStyle" TargetType="Grid">
+            <Setter Property="Background" Value="{StaticResource ResourceKey={x:Static def:Definitions.MenuItemBackground}}"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsTitleBarHide}" Value="true">
+                    <Setter Property="Background" Value="{StaticResource ResourceKey={x:Static def:Definitions.PanelBackgroundLevel0_1}}"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
+    </UserControl.Resources>
+    <Border Style="{StaticResource DefaultBorderStyle}">
+        <Grid Style="{StaticResource DefaultGridStyle}"	  
+            x:Name="ContainerGrid">
+            <Grid.ColumnDefinitions>
 				<ColumnDefinition Width="*" />
 				<ColumnDefinition Width="Auto" />
 
@@ -367,7 +390,8 @@
 						Style="{StaticResource WindowMaximizeButton}" />
 				<Button x:Name="CloseButton"
 						Margin="0,1"
-						Style="{StaticResource WindowControlButton}" />
+						Style="{StaticResource WindowControlButton}" 
+                        />
 			</StackPanel>
 
 		</Grid>
